data/derived/sp14/progs/unify/prog2811.ml.out
Characters 336-339:
  removeZero(List.rev(helpy i l 0 [0,0]));;
                                   ^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
